.provarCaches/00D5f000005vwGkEAI/objects/rstk__sobolprt__c.object
<CustomObject>
    <description>Bill of Lading Print data header - sobolprt__c</description>
    <fields>
        <fullName>rstk__actdeldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__bolno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill of Lading Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__carrierdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__companylogo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__detailmethod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Detail Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipper Lines</fullName>
                </value>
                <value>
                    <fullName>Containers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__fobdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__frttermdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__grosswt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Gross Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__netwt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Net Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__numcontainers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Containers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pages__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__printed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__prtdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__route__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipping Route</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__schdeldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scheduled Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__shipdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_address1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_address2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_address3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_city__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_conmethod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Text to Email</fullName>
                </value>
                <value>
                    <fullName>Text to Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_state__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipfrom_zip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship From Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_address1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_address2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_address3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_city__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_conmethod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Text to Email</fullName>
                </value>
                <value>
                    <fullName>Text to Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__shipto_country__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_fax__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_phone__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_state__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipto_zip__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consigned To Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipviadesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sobol__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill of Lading</label>
        <referenceTo>rstk__sobol__c</referenceTo>
        <relationshipName>BOL_Print_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__tarewt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tare Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__vehicle__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vehicle/Vessel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>